--- a/newGuo/address.html
+++ b/newGuo/address.html
@@ -182,14 +182,14 @@
         <!--支付方式-->
         <h1>支付方式</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
-        <div class="selected" style="width: 125px; height: 45px; line-height: 45px; text-align: center; margin: 15px;">
+        <div class="selected" style="width: 125px; height: 45px; line-height: 45px; text-align: center; margin: 15px; margin-left: 0;">
            在线支付
         </div>
 
 
         <!--购物车标题-->
         <ul class="table-name">
-            <li style="width: 53%; text-align: left; margin-left: 2%">名称</li>
+            <li style="width: 51%; text-align: left; margin-left: 2%">名称</li>
             <li style="width: 10%">单价</li>
             <li style="width: 19%">数量</li>
             <li style="width: 10%">小计</li>
@@ -197,7 +197,7 @@
         <!--购物车标题-->
 
         <ul style="padding: 0;margin:0; height: 110px;" class="product-display">
-            <li class="clearfix" style="width: 53%; text-align: left; margin-left: 2%">
+            <li class="clearfix" style="width: 53%; text-align: left; ">
                 <a href="#" class="pic">
                     <img src="images/5_01.jpg">
                 </a>
@@ -208,7 +208,7 @@
             <li style="width: 10%; margin-top:25px; color: #ff9900">2399元</li>
         </ul>
         <ul style="padding: 0;margin:0; height: 110px;" class="product-display">
-            <li class="clearfix" style="width: 53%; text-align: left; margin-left: 2%">
+            <li class="clearfix" style="width: 53%; text-align: left;">
                 <a href="#" class="pic">
                     <img src="images/5_01.jpg">
                 </a>
@@ -223,7 +223,7 @@
 
         <!--购物车底部-->
         <ul class="table-content" style="margin-bottom: 30px;">
-            <li class="clear" style="width: 255px; text-align: right;float: right">
+            <li class="clear" style="width: 267px; text-align: right;float: right">
                 <div class="cart-total">
                     <div class="cart-total-one">应付总额：</div>
                     <div class="cart-total-two">20000元</div>
