--- a/newGuo/cart.html
+++ b/newGuo/cart.html
@@ -181,7 +181,7 @@
            <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
            <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
                <a href="#" >
-                   <i class="icon-remove"></i>
+                   x
                </a>
            </li>
        </ul>
@@ -222,7 +222,7 @@
            <li style="width: 10%; height: 150px; line-height: 150px; color: #ff9900">2399元</li>
            <li style="width: 10%; margin-top:66px;*+margin-top: 70px;">
                <a href="#" >
-                   <i class="icon-remove"></i>
+                   x
                </a>
            </li>
        </ul>
@@ -231,13 +231,13 @@
        <!--购物车底部-->
        <ul class="table-content" style="margin-bottom: 30px;">
            <li class="clear" style="width: 255px; text-align: right;float: right">
-               <div class="cart-total">
+               <div class="cart-total" style="margin-left: -25px;">
                    <div class="cart-total-one">总计：</div>
-                   <div class="cart-total-two">20000<span style="font-size: 16px;">元</span></div>
+                   <div class="cart-total-two">20000元</div>
                </div>
                <div class="clear"></div>
 
-               <a href="address.html" class="btn btn-red" style="float: right; width: 110px; margin-top:50px;">去结账</a>
+               <a href="address.html" class="btn btn-red" style="float: right; width: 110px; height: 45px; line-height: 45px; margin-top:110px; *+margin-top: 70px;">去结账</a>
            </li>
 
        </ul>
