--- a/newGuo/zhongguodao.html
+++ b/newGuo/zhongguodao.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="global/styles/font-awesome-ie7.min.css">
     <link href="global/scripts/lib/fancybox/jquery.fancybox-1.3.4.css" type="text/css" rel="stylesheet">
 </head>
-<body style="overflow-y:auto;">
+<body style="overflow-y:auto; overflow-x: hidden;">
 <style>
     /* tab切换页 */
     .etabs {
@@ -36,7 +36,7 @@
     .tab a { font-size: 14px; line-height: 2em; display: block; padding: 0 10px; outline: none; }
     .tab a:hover { text-decoration: underline; }
     .tab.active { padding-top: 4px; position: relative; top: 1px; }
-    .tab a.active { font-weight: bold; color: #b18247; }
+    .tab a.active {color: #c33829; }
     .panel-container { margin-bottom: -2px; }
     #tabs1-four{background-color: #eee;}
     #tab-container{margin-top:50px;}
@@ -162,28 +162,202 @@
     <div class="panel-container" style="z-index: 0; position: static">
         <div id="tabs1-one">
             <div class="good-information1 ">
+                <div class="good-information1-png">
+                   <img src="zhongguodao/images/2_01.png" style="margin-top: 115px; margin-bottom: 30px;">
+                    <div class="watch-tv">
+                        <a href="http://box.guoguan.com/index/youku" style="text-decoration: underline; color: #fff;">
+                            观看中国道视频
+                            <i class="icon-angle-right"></i>
+                        </a>
+                        <a href="http://box.guoguan.com/index/youku" style="text-decoration: underline; margin-left:60px; color: #fff;">
+                            欣赏中国道图片
+                            <i class="icon-angle-right"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="good-information2">
+                <div class="good-information2-content">
+                   <img src="zhongguodao/images/2_02.png" style="margin-top: 95px;">
+                   <p style="margin-top: 0;">
+                       「国馆·中国道」不仅是酒，更是颠覆传统白酒的杰作。<br>
+                       它在器型工艺、文化内涵、大师跨界、酒体酿造、收藏品鉴……等方面展现前所未有的极致，远逾酒本身。<br>
+                       迄今为止，能把这五大价值集于一身的，舍「国馆·中国道」无他。
+                   </p>
+                   <div class="good-information2-img">
+                      <div class="good-information2-content-imgOne imgOne"></div>
+                       <div class="good-information2-content-imgTwo imgTwo"></div>
+                       <div class="good-information2-content-imgThree imgThree"></div>
+                       <div class="good-information2-content-imgFour imgFour"></div>
+                       <div class="good-information2-content-imgFive imgFive"></div>
+                   </div>
+                </div>
             </div>
             <div class="good-information3">
+                <div class="good-information3-content">
+                    <div>
+                        <img src="zhongguodao/images/2_03.png" alt="让世界惊艳的卷轴设计"/>
+                        <div style="font-size: 18px; color: #fff; margin-top: 20px; margin-bottom: 20px;">最具中国气质的独创卷轴器型
+                            <span style="font-size: 14px">（申请专利号：201430119965.3）</span>
+                        </div>
+                        <p>
+                            作为一款颠覆性的作品，「国馆·中国道」在很多方面都堪称独创，第一眼就能感受到它的与众不同：极致中国风的卷轴造型，极尽繁复的景泰蓝纹饰，极简主义的瓶型， 让每个看到它的人，都为之惊艳，为之爱不释手。
+                        </p>
+                        <a href="#">
+                            进一步了解&nbsp;国馆·中国道的器型设计 >
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="good-information4">
+                <div class="good-information3-content">
+                    <div style="padding-top: 91px;">
+                        <img src="zhongguodao/images/2_04.png" alt="最中国的人生哲学"/>
+                        <div style="font-size: 18px; color: #fff; margin-top: 20px; margin-bottom: 20px;">一套四支，分别为“天道酬勤、地道酬善、商道酬信、业道酬精”</span>
+                        </div>
+                        <p>
+                            多数白酒文化日渐沦为酒桌文化，而「国馆·中国道」让文化实至名归。四种堪为座右铭的人生哲学，以酣畅书法跃然瓶身之上，“文化”从此看得见，摸得着，品得到。
+                        </p>
+                        <a href="#">
+                            进一步了解&nbsp;国馆·中国道的文化内涵 >
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="good-information5">
+                <div class="good-information3-content">
+                    <div style="padding-top: 91px;">
+                        <img src="zhongguodao/images/2_05.png" alt="大师级的跨界艺术"/>
+                        <div style="font-size: 18px; color: #fff; margin-top: 20px; margin-bottom: 20px;">中国酿酒大师与艺术大师首次跨界联袂创作</span>
+                        </div>
+                        <p>
+                            “首届中国酿酒大师”是白酒界最高的荣誉，全国仅有32位，代表了行业的顶尖水准。「国馆·中国道」由首届中国酿酒大师李家顺匠心酿制，并邀请艺术大师李正天题写瓶身书法字，精妙绝伦的酿酒艺术与妙入毫巅的书法艺术，于此融为一体。
+                        </p>
+                        <a href="#">
+                            进一步了解&nbsp;酿酒大师和艺术大师 >
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="good-information6">
+                <div class="good-information3-content">
+                    <div style="padding-top: 91px;">
+                        <img src="zhongguodao/images/2_06.png" alt="数百年一遇的稀缺好酒"/>
+                        <div style="font-size: 20px; color: #fff; margin-top: 20px; margin-bottom: 20px;">目前存世最古老的窖池之一，首批中国食品文化遗产（不超过5家）</span>
+                        </div>
+                        <p>
+                            沱牌舍得泰安作坊——首批中国食品文化遗产、国家级保护文物。中国名酒厂众多，但获“首批”殊荣的不超过5家。「国馆·中国道」选用泰安作坊窖龄老酒作为专属酒体，千年老窖万年糟，数百年老窖池酿出的酒绝非寻常可比，中国品酒大师钟杰赞誉其为“酒中的极品”。
+                        </p>
+                        <a href="#">
+                            进一步了解&nbsp;稀缺好酒是怎样酿成的 >
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="good-information7">
+                <div class="good-information3-content">
+                    <div style="padding-top: 91px;">
+                        <img src="zhongguodao/images/2_07.png" alt="为收藏而生的绝妙酒品"/>
+                        <p>
+                            不是所有的酒，都适合收藏。在我们看来，能称之为“收藏级”的酒，除了可以品鉴，更要能玩味、能珍藏、甚至能升值。99%的酒只能摆上饭桌，而首批仅有5000套的「国馆·中国道」足以登堂入室。
+                        </p>
+                        <a href="#">
+                            进一步了解&nbsp;国馆·中国道的收藏价值 >
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="good-information8">
             </div>
+            <div id="zhongguodao-billboard" data-hires="true">
+                <div class="swipe">
+                    <ul id="slide" style="margin:0;padding:0;">
+                        <li style='display:block;'>
+                            <div class="zhongguodao-banner-1">
+                                <div class="zhongguodao-banner-1-title">
+                                    <img src="zhongguodao/images/2_09.png" alt="最好的礼物，献给生命中最重要的人" >
+                                </div>
+                            </div>
+                        </li>
+                        <li style='display:none;'>
+                            <div class="zhongguodao-banner-2">
+                                <div class="zhongguodao-banner-2-title">
+                                    送给事业上的贵人，让拳拳心意，化作情谊。
+                                </div>
+                            </div>
+                        </li>
+                        <li style='display:none;'>
+                            <div class="zhongguodao-banner-3">
+                                <div class="zhongguodao-banner-2-title">
+                                    送给长辈，那些说不出口的爱，用这杯酒来表达。
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <div class="zhongguodao-left-right" >
+                        <div class="zhongguodao-left-angle">
+                            <i class="icon-angle-left"></i>
+                        </div>
+                        <div class="zhongguodao-right-angle">
+                            <i class="icon-angle-right"></i>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div id="pagenavi" class="nav-dot-display">
+                    <a href="#" class="active" style=" background: url('images/dot_empty.png') center top no-repeat;
+            background-size: 10px 10px;
+            display: inline-block;
+            height: 10px;
+            margin-right: 10px;
+            width: 10px;"></a>
+                    <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+            background-size: 10px 10px;
+            display: inline-block;
+            height: 10px;
+            margin-right: 10px;
+            width: 10px;"></a>
+                    <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+            background-size: 10px 10px;
+            display: inline-block;
+            height: 10px;
+            margin-right: 10px;
+            width: 10px;"></a>
+                    <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+            background-size: 10px 10px;
+            display: inline-block;
+            height: 10px;
+            margin-right: 10px;
+            width: 10px;"></a>
+                    <a href="#" style=" background: url('images/dot_empty.png') center top no-repeat;
+            background-size: 10px 10px;
+            display: inline-block;
+            height: 10px;
+            margin-right: 10px;
+            width: 10px;"></a>
+                </div>
+            </div>
             <div class="good-information9">
+                <div class="good-information3-content">
+                    <div style="padding-top: 91px;">
+                        <img src="zhongguodao/images/2_08.png" alt="一套四支，全网售价，2399元" style="margin-bottom: 12px;">
+                        <br>
+                        <a href="#">
+                            进一步了解&nbsp;国馆·中国道的产品规格 >
+                        </a>
+                        <p>
+                            这是一套绝大多数人猜不出价格的作品，而我们让大多数人消费得起。同等档次和品质的白酒市场售价超过6000元，而「国馆·中国道」一套四支，全网售价仅为2399元。并且，首批限量5000套。
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div id="tabs1-two">
             <div class="story-banner">
-                <img src="zhongguodao/images/banner_02.jpg" style="width: 100%; margin-top: -45px; *+margin-top:0;">
+                <img src="zhongguodao/images/banner_02.jpg" style="width: 100%; ">
                 <div class="s-content">
                     <div class="s-wenzhang">
                         <p style="margin-top:50px;">
@@ -666,6 +840,33 @@
         },function(){
             $(this).find("img").css("opacity","0.7");
         });
+
+        /*人头切换*/
+        $(".imgOne").hover(function(){
+            $(this).removeClass("good-information2-content-imgOne").addClass("good-information2-content-imgOneHover")
+        },function(){
+            $(this).removeClass("good-information2-content-imgOneHover").addClass("good-information2-content-imgOne")
+        })
+        $(".imgTwo").hover(function(){
+            $(this).removeClass("good-information2-content-imgTwo").addClass("good-information2-content-imgTwoHover")
+        },function(){
+            $(this).removeClass("good-information2-content-imgTwoHover").addClass("good-information2-content-imgTwo")
+        })
+        $(".imgThree").hover(function(){
+            $(this).removeClass("good-information2-content-imgThree").addClass("good-information2-content-imgThreeHover")
+        },function(){
+            $(this).removeClass("good-information2-content-imgThreeHover").addClass("good-information2-content-imgThree")
+        })
+        $(".imgFour").hover(function(){
+            $(this).removeClass("good-information2-content-imgFour").addClass("good-information2-content-imgFourHover")
+        },function(){
+            $(this).removeClass("good-information2-content-imgFourHover").addClass("good-information2-content-imgFour")
+        })
+        $(".imgFive").hover(function(){
+            $(this).removeClass("good-information2-content-imgFive").addClass("good-information2-content-imgFiveHover")
+        },function(){
+            $(this).removeClass("good-information2-content-imgFiveHover").addClass("good-information2-content-imgFive")
+        })
     })
 </script>
 <script type="text/javascript">
@@ -682,11 +883,11 @@
         })();
     }
 
-    $(".left-angle").on("click",function(){
+    $(".zhongguodao-left-angle").on("click",function(){
         t4.prev();
     })
 
-    $(".right-angle").on("click",function(){
+    $(".zhongguodao-right-angle").on("click",function(){
         t4.next();
     })
 
