--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -183,7 +183,7 @@
         </ul>
         <div class="clear"></div>
         <div class="model-one">
-            <div class="model-one-left" onclick="window.open('www.baidu.com')">
+            <div class="model-one-left" onclick="window.open('zhongguodao.html')">
                 <div class="detail">
                     <div class="title">国馆中国道</div>
                     <div class="text">这一次,人们重新定义白酒</div>
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="model-little-two model-little">
+                <div class="model-little-two model-little" onclick="window.open('zhongguodao.html#tabs1-five')">
                     <div class="model-bottom">
                         <div class="left">
                             <div class="title"><span>跨界之作</span></div>
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="model-little-four model-little">
+                <div class="model-little-four model-little" onclick="window.open('zhongguodao.html#tabs1-seven')">
                     <div class="model-bottom">
                         <div class="left">
                             <div class="title"><span>规格参数</span></div>
