--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -43,13 +43,17 @@
 
 <!--tab切换页-->
 <div id="tab-container" class='tab-container' style="border-top: 0.1rem solid #ebebeb">
-    <!--<ul class='etabs'>
-        <li class='tab'><a href="#tabs1-html">概述</a></li>
-        <li class='tab'><a href="#tabs1-js">参数</a></li>
-        <li class='tab'><a href="#tabs1-styles">故事</a></li>
-    </ul>-->
+    <ul class='etabs'>
+        <li class='tab'><a href="#tabs1-one">概述</a></li>
+        <li class='tab'><a href="#tabs1-two">酒体</a></li>
+        <li class='tab'><a href="#tabs1-three">设计</a></li>
+        <li class='tab'><a href="#tabs1-four">文化</a></li>
+        <li class='tab'><a href="#tabs1-five">艺术</a></li>
+        <li class='tab'><a href="#tabs1-six">收藏</a></li>
+        <li class='tab'><a href="#tabs1-seven">拆开步骤</a></li>
+    </ul>
     <div class='panel-container'>
-        <div id="tabs1-html" style="background-color: #fff">
+        <div id="tabs1-one" style="background-color: #fff">
             <div class="">
                 <img class="lazy" src="images/grey.gif" data-original="images/11_01.jpg" style="width: 100%">
                 <noscript><img src="images/11_01.jpg" style="width: 100%"></noscript>
@@ -92,7 +96,7 @@
             </div>
         </div>
 
-       <!-- <div id="tabs1-js">
+        <div id="tabs1-two">
             <div class="product-data-one">
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
@@ -107,7 +111,7 @@
             </div>
         </div>
 
-        <div id="tabs1-styles">
+        <div id="tabs1-three">
             <div class="product-story-one">
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
@@ -120,7 +124,20 @@
             <div class="product-story-four">
                 <img src="images/mitv-conf-01.jpg" style="width: 100%">
             </div>
-        </div>-->
+        </div>
+
+        <div id="tabs1-four">
+           made
+        </div>
+        <div id="tabs1-five">
+            made
+        </div>
+        <div id="tabs1-six">
+            made
+        </div>
+        <div id="tabs1-seven">
+            made
+        </div>
     </div>
 </div>
 
